--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <project-name>unigraph</project-name>
         <jstl.version>1.2</jstl.version>
         <servletapi.version>3.1.0</servletapi.version>
+        <lombok-version>1.16.20</lombok-version>
+        <postgres-version>42.2.5</postgres-version>
     </properties>
 
     <build>
@@ -71,6 +73,27 @@
             <artifactId>jstl</artifactId>
             <version>${jstl.version}</version>
         </dependency>
-    </dependencies>
 
+        <!-- PostgreSQL -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>${postgres-version}</version>
+        </dependency>
+
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok-version}</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- Log4J -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+    </dependencies>
 </project>
