Added spring data jpa, works fine

--- a/src/main/resources/settings.properties
+++ b/src/main/resources/settings.properties
@@ -1,4 +1,8 @@
-database.database=unigraph
-database.schema=public
-database.user=postgres
-database.password=password
+db.schema=public
+db.user=postgres
+db.password=password
+db.driver=org.postgresql.Driver
+db.url=jdbc:postgresql://localhost:5432/unigraph
+db.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
+db.hibernate.show_sql=true
+db.hibernate.hbm2ddl.auto=create
