--- a/pom.xml
+++ b/pom.xml
@@ -9,14 +9,17 @@
     <name>${project-name}</name>
     <packaging>war</packaging>
     <properties>
+        <project-name>unigraph</project-name>
         <jdk-version>1.8</jdk-version>
         <spring-version>5.1.5.RELEASE</spring-version>
+        <spring.data-version>2.1.5.RELEASE</spring.data-version>
         <junit-version>4.12</junit-version>
-        <project-name>unigraph</project-name>
         <jstl.version>1.2</jstl.version>
         <servletapi.version>3.1.0</servletapi.version>
-        <lombok-version>1.16.20</lombok-version>
         <postgres-version>42.2.5</postgres-version>
+        <log4j-version>1.2.17</log4j-version>
+        <jodatime-version>2.9.9</jodatime-version>
+        <hibernate-version>5.4.2.Final</hibernate-version>
     </properties>
 
     <build>
@@ -52,6 +55,16 @@
             <artifactId>spring-test</artifactId>
             <version>${spring-version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>${spring.data-version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-jpa</artifactId>
+            <version>${spring.data-version}</version>
+        </dependency>
 
         <!-- JUnit -->
         <dependency>
@@ -67,11 +80,15 @@
             <version>${servletapi.version}</version>
             <scope>provided</scope>
         </dependency>
-
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>jstl</artifactId>
             <version>${jstl.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+            <version>2.2</version>
         </dependency>
 
         <!-- PostgreSQL -->
@@ -81,19 +98,25 @@
             <version>${postgres-version}</version>
         </dependency>
 
-        <!-- Lombok -->
+        <!-- Hibernate -->
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>${lombok-version}</version>
-            <scope>provided</scope>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>${hibernate-version}</version>
         </dependency>
 
         <!-- Log4J -->
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
+            <version>${log4j-version}</version>
+        </dependency>
+
+        <!-- JodaTime -->
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>${jodatime-version}</version>
         </dependency>
     </dependencies>
 </project>
