--- a/src/main/resources/settings.properties
+++ b/src/main/resources/settings.properties
@@ -5,4 +5,4 @@ db.user=postgres
 db.password=password
 db.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 db.hibernate.show_sql=true
-db.hibernate.hbm2ddl.auto=create
+db.hibernate.hbm2ddl.auto=update
