Added test to UnigraphServiceTest

--- a/src/main/resources/settings.properties
+++ b/src/main/resources/settings.properties
@@ -4,5 +4,5 @@ db.schema=public
 db.user=postgres
 db.password=password
 db.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
-db.hibernate.show_sql=true
+db.hibernate.show_sql=false
 db.hibernate.hbm2ddl.auto=update
